--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "author": "jkeatley <jkeatley@cartrawler.com>",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "gatsby": "^3.4.0",
+    "gatsby-plugin-layout": "^2.4.0",
+    "i18next": "^20.2.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-i18next": "^11.8.15"
   }
 }
